--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -96,7 +96,7 @@ body {
           }
       }
       .content-wrapper {
-          z-index: 5;
+          z-index: 3;
          position: relative;
          top: 0;
          left: 0;
